--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV design using HTML and CSS</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 
 </head>
@@ -17,7 +17,7 @@
         <div class="profile">
             <div class="profile_container">
                 <div class="profile_profileImg">
-                    <img src="/images/Circle Pic.png" alt="Phiwo">
+                    <img src="./images/Circle Pic.png" alt="Phiwo">
                 </div>
                 <div>
                     <h1 class="Profile_name">
@@ -34,7 +34,7 @@
                         professional challenges,
                         mentoring, strong work ethic and an agile Company culture.
                     </p>
-                    <a href="/cv.pdf" class="download-btn" download="Resume.pdf">Download CV</a>
+                    <a href="./cv.pdf" class="download-btn" download="Resume.pdf">Download CV</a>
                 </div>
             </div>
         </div>
